wallet-ext: various ui fixes
* button color always black even for anchor elements
* wallet container stop expanding to full screen if not necessary
* coin type ellipsis text overflow (to avoid overflowing)
* coin type title

--- a/wallet/src/ui/app/pages/home/Home.module.scss
+++ b/wallet/src/ui/app/pages/home/Home.module.scss
@@ -7,7 +7,7 @@
     flex-flow: column nowrap;
     width: 400px;
     padding-bottom: 12px;
-    min-height: calc(100vh - 12px);
+    min-height: 450px;
 
     :global(.is-popup) & {
         min-height: 400px;
